# moonwalk-employee-hr

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  PHASE1_NOTES.md  auth.py  cliff.toml  config.py  db.py  export_employees.py  ingest_contract.py  ingest_folder.py  main.py  nixpacks.toml  parse_contract.py  pyproject.toml  railway.json  renovate.json  requirements.txt  settings.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_hr_schema.py
appsmith/: hr-portal-setup.md
routers/: employees.py  exceptions.py  export.py  health.py  ingest.py
scripts/: lint_claude_md.py
tests/: conftest.py  test_employees.py  test_exceptions.py  test_export.py  test_health.py  test_ingest.py
