[project]
name = "employee-hr"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.0",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "loomi-auth @ git+https://github.com/Mister-ams/packages.git#subdirectory=loomi-auth-py",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.9",
    "types-requests",
    "types-psycopg2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=60 --ignore=alembic"
